--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -25,7 +25,7 @@ jobs:
           --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
     
     steps:
       - name: Checkout code
@@ -55,7 +55,7 @@ jobs:
 
       - name: Wait for MySQL to be ready
         run: |
-          sleep 30
+          while ! docker exec mysql mysqladmin ping --silent; do sleep 5; done
 
       - name: Copy .env.example and rename to .env
         run: |
@@ -67,8 +67,8 @@ jobs:
 
       - name: Run migrations
         run: |
-          docker exec geminis-backend php artisan migrate --force
+          docker exec geminis-backend php artisan migrate --force || (docker logs mysql && docker logs geminis-backend && exit 1)
 
       - name: Run unit tests
         run: |
-          docker exec geminis-backend vendor/bin/phpunit
+          docker exec geminis-backend vendor/bin/phpunit || (docker logs mysql && docker logs geminis-backend && exit 1)
