--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -42,14 +42,14 @@ jobs:
 
       - name: Esperar a que MySQL esté listo
         run: |
-          until docker run --rm --network github_network mysql:8 sh -c 'mysqladmin ping -h mysql --silent'; do
+          until docker run --rm --network ${{ job.services.mysql.networks.default }} mysql:8 sh -c 'mysqladmin ping -h mysql --silent'; do
             echo "Esperando a que MySQL esté listo..."
             sleep 5
           done
           echo "¡MySQL está listo!"
 
       - name: Iniciar contenedor backend
-        run: docker run -d --name geminis-backend --network github_network --env-file .env geminis-backend:latest
+        run: docker run -d --name geminis-backend --network ${{ job.services.mysql.networks.default }} --env-file .env geminis-backend:latest
 
       - name: Copiar .env.example y renombrarlo a .env
         run: docker cp backend/.env.example geminis-backend:/var/www/.env
