agrego Post test results to PR 3

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -60,6 +60,7 @@ jobs:
           path: ./*.xml
 
       - name: Post test results to PR
+        if: github.event_name == 'pull_request'
         uses: actions/github-script@v3
         with:
           script: |
