--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -98,6 +98,12 @@ jobs:
               });
             }
 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
       - name: SonarQube Scan
         uses: SonarSource/sonarcloud-github-action@v1.5
         env:
