--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -76,7 +76,7 @@ jobs:
           sudo apt-get install -y wget unzip
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
           unzip sonar-scanner-cli-4.6.2.2472-linux.zip
-          export PATH=$PATH:$(pwd)/sonar-scanner-4.6.2.2472-linux/bin
+          echo 'export PATH=$(pwd)/sonar-scanner-4.6.2.2472-linux/bin:$PATH' >> $GITHUB_ENV
 
       - name: SonarQube Scan
         env:
