--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -60,10 +60,13 @@ jobs:
           extensions: mbstring, intl
           tools: composer
 
-      - name: Install PHP_CodeSniffer
+      - name: Install PHP_CodeSniffer and PHPCBF
         run: |
           composer global require "squizlabs/php_codesniffer=*"
           echo "$HOME/.composer/vendor/bin" >> $GITHUB_PATH
+
+      - name: Run PHPCBF to fix coding standard issues
+        run: phpcbf --standard=PSR12 backend/
 
       - name: Run PHP_CodeSniffer
         run: phpcs --standard=PSR12 backend/
@@ -75,7 +78,6 @@ jobs:
             -d '{"text": "PHP_CodeSniffer analysis failed for commit '${{ github.sha }}'. Please check the details in the pipeline logs."}' \
             ${{ secrets.TEAMS_WEBHOOK_URL }}
 
-          
       - name: Upload test results
         uses: actions/upload-artifact@v2
         with:
@@ -114,7 +116,6 @@ jobs:
                 commit_sha: commitSha,
                 body: body
               });
-            }
 
       - name: Clean up Docker containers and network
         if: always()
