--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2' # o la versión de PHP que necesites
+          php-version: '8.2'
           extensions: mbstring, intl
           tools: composer
 
@@ -69,10 +69,15 @@ jobs:
         run: phpcbf --standard=PSR12 backend/
 
       - name: Run PHP_CodeSniffer
-        run: phpcs --standard=PSR12 backend/
+        id: phpcs
+        run: phpcs --standard=PSR12 backend/ || true
+
+      - name: Check PHPCS Output
+        if: steps.phpcs.outcome == 'failure'
+        run: echo "PHP_CodeSniffer found issues."
 
       - name: Send alert to Teams if PHP_CodeSniffer fails
-        if: failure()
+        if: steps.phpcs.outcome == 'failure'
         run: |
           curl -H 'Content-Type: application/json' \
             -d '{"text": "PHP_CodeSniffer analysis failed for commit '${{ github.sha }}'. Please check the details in the pipeline logs."}' \
